--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <div id="root"></div>
+    <div id="rootAmis"></div>
     <script type="module">
       import './src/index';
     </script>
