--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>amis 可视化编辑器</title>
   </head>
 
+  <script>
+
+    function onAppActions(){
+      console.log('触发自定义事件操作')
+    }
+  </script>
+
   <body>
     <div id="root"></div>
     <script type="module">
